# libthermo

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  environment-dev.yml  libthermoConfig.cmake.in  test.ipy
benchs/: CMakeLists.txt  cantera.cc  dynamic_props.cc  main.cc  main_old.cc  multiprops_array.cc  multiprops_vector.cc  plot_benchs.py  python_benchs.ipy  python_benchs.py
cmake/: FindNumPy.cmake
include/libthermo/: exceptions.hpp  gas.h  ideal_gas.h  ideal_gas.hpp  interp.h  math_utils.h  math_utils.hpp  poly_gas.hpp  polynomial_gas.h  real_gas.h  real_gas.hpp  thermo.hpp  thread_pool.hpp  type_traits.hpp  version.hpp
include/libthermo/detail/: ideal_gas_xt_impl.hpp  poly_gas_xt_impl.hpp  polyval.hpp  thread_pool_inl.hpp
pythermo/: CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  benchmark.cc  benchmark.h  environment-dev.yml  gas.cpp  gas.hpp  ideal.cpp  ideal_gas.cpp  main.cpp  poly_gas.cpp  pyproject.toml  real_gas.cpp  setup.cfg  test.py  thermo.cpp  thermo.hpp
pythermo/pythermo/: __init__.py
pythermo/src/: ideal_gas.cpp  main.cpp  poly_gas.cpp  thermo.cpp  thermo.hpp
src/: ideal_gas.cc  math_utils.cc
test_pygas/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  gtest_main.cpp  test_ideal_gas.cc  test_interp1d.cc  test_poly_gas.cc
