[build-system]
requires = ["scikit-build-core >=0.10", "nanobind", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "libthermo"
version = "0.3.1"
description = "Python bindings of libthermo, a fast C++ thermodynamical library"
authors = [
    { name = "Adrien Delsalle", email = "ad.delsalle@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/twiinIT/libthermo"

[tool.scikit-build]
#minimum-version = "build-system.requires"
#cmake.build-type = "Release"
wheel.packages = ["pythermo"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
LIBTHERMO_USE_XTENSOR = "OFF"
XTENSOR_USE_XSIMD = "ON"
XTENSOR_USE_TBB = "ON"