[metadata]
name = pythermo
version = attr: pythermo._version.__version__
description = Python bindings of libthermo
long_description = Python bindings of libthermo, a fast C++ thermodynamical library
long_description_content_type = text/markdown
license_file = LICENSE
author = twiinIT
author_email = adrien.delsalle@twiinit.com
url = https://github.com/twiinit/libthermo
platforms = Windows, Linux, Mac OS X
keywords = thermo, xtensor

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
